--- a/login.css
+++ b/login.css
@@ -5,13 +5,38 @@ body{
    
 }
 .container-login{
-    background-color: #2f2f2f;
+    background-color: #ffffff;
     display: flex;
     margin: 4vw;
-    height: 85vh;
+    height: 75vh;
+    width: 60vw;
     border-radius: 6vw;
-    background-color: rgb(32 32 32 / 70%);
+  
+
 }
+
+.card-login.active{
+    display: none;
+   
+}
+.cadastro-login.active{
+    width: 60%;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 35px;
+    background-image: linear-gradient(50deg,rgb(165,0,78), rgb(131,2,80),rgb(76,6,84),rgb(53,7,86),rgb(39,8,87),rgb(23,9,88));
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px rgb(0 0 0);
+    align-items: center;
+    justify-content: flex-start;
+}
+.cadastro-login{
+
+    display: none ;
+   
+}
+
 .main-login{
     width: 100vw;
     height: 100vh;
@@ -29,33 +54,83 @@ body{
     justify-content: center;
 }
 
-.right-login{
+
+
+
+.right-login {
     width: 40vw;
     height: 90vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
-
+    transform: translate(0px, 30px);
+    justify-content: flex-start;
+}
+.right-login > input[type="checkbox"]{
+    width: 25vw;
+    height: 5vh;
+    appearance: none;
+    background-color: rgb(125, 255, 155);
+    border-radius: 15px;
+    margin-bottom: 1vh;
+    box-shadow:  0px 0px 20px 5px rgb(2, 84, 13);
+    cursor: pointer;
+    transition:0.6s;
+    margin-bottom: 2vw;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    
+}
+.right-login > input:checked[type="checkbox"]{
+    background-color: aliceblue;
+    box-shadow:  0px 0px 20px 5px rgb(90, 90, 90);
+    display: flex;
+    justify-content: flex-start;
+   
 }
 
+input[type="checkbox"]::before{
+    content: 'Cadastro';
+    width: 12vw;
+    height: 5vh;
+    background-color:rgb(182, 181, 181);
+    
+    position: absolute;
+     border-radius: 5vw; 
+    align-items: center;
+    justify-content: space-around;
+    text-transform: uppercase;
+    transform: scale(1.2); 
+    display: flex;
+   
+}
 
+.right-login > input:checked[type="checkbox"]::before{
+    
+    transition:0.6s;
+    content: 'Login';
+    text-transform: uppercase;
+    
+}
 .card-login{
     width: 60%;
+    height: 50vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
     padding: 30px 35px;
     background-image: linear-gradient(50deg,rgb(165,0,78), rgb(131,2,80),rgb(76,6,84),rgb(53,7,86),rgb(39,8,87),rgb(23,9,88));
     border-radius: 20px;
-    box-shadow: 0px 10px 40px rgb(0, 0, 0);
+    box-shadow: 0px 10px 40px rgb(0 0 0);
+    align-items: center;
+    justify-content: flex-start;
+}
+.cadastro-login>h2{
+    color: aliceblue;
 }
 .card-login>h2{
     color: aliceblue;
 }
-
 
 .fields-login{
     display: flex ;
@@ -64,18 +139,18 @@ body{
     justify-content: center;
     margin: 10px 0px;
     width: 100%;
-
+    padding: 2vh;
 }
 
 .fields-login >input{
     width: 100%;
     border: none;
     border-radius: 10px;
-    padding: 15px;
+    padding: 5px;
     background-color: aliceblue;
     color: beige;
-    font-size: 12pt;
-    box-shadow: 0px 10px 40px #5555;
+    font-size: 10pt;
+    box-shadow: 0px 0px 20px 5px rgba(221, 185, 254, 0.333);
     box-sizing: border-box;
     outline:  invert;
     outline-color: rgb(38, 24, 51)
@@ -85,6 +160,7 @@ body{
     color: rgb(213, 210, 198);
 }
 
+
 .fields-login> input::placeholder{
     color: rgb(129, 127, 127);
 }
@@ -92,7 +168,7 @@ body{
 .btn-login{
     width: 100%;
     padding: 16px 16px;    
-    margin-top: 30px;
+
     border:none;
     border-radius: 8px;
     text-transform: uppercase;
@@ -103,8 +179,53 @@ body{
     background:#2e2137 ;
     box-shadow: 0px 10px 40px -10px #f4d0ff;
 }
+.btn-cadastro{
+    width: 100%;
+    padding: 16px 16px;    
+    border:none;
+    border-radius: 8px;
+    text-transform: uppercase;
+    font-weight: 800;
+    cursor: pointer;
+    letter-spacing: 3px;
+    color: rgb(210, 210, 210);
+    background:#2e2137 ;
+    box-shadow: 0px 10px 40px -10px #f4d0ff;
+    margin-top: 1vh;
+}
+.fields-cadastro{
+    display: flex ;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    padding: 0.5vh;
+}
+
+.fields-cadastro >input{
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: aliceblue;
+    color: beige;
+    font-size: 10pt;
+    box-shadow: 0px 0px 20px 5px rgba(221, 185, 254, 0.333);
+    box-sizing: border-box;
+    outline:  invert;
+    outline-color: rgb(38, 24, 51)
+}
+.fields-cadastro >label{
+    margin-bottom: 10px;
+    color: rgb(213, 210, 198);
+}
+
+
+.fields-login> input::placeholder{
+    color: rgb(129, 127, 127);
+}
 .left-login-img{
-width: 40vw;
+width: 25vw;
 align-self: center;
 }
 @media only screen and (min-width: 1200px){
@@ -126,16 +247,43 @@ align-self: center;
         padding: 20px 35px;
         transform: translate(10px, -50px);
     }
+    .cadastro-login {
+        width: 100%;
+        padding: 20px 35px;
+        transform: translate(10px, -50px);
+    }
+
 
     .right-login {
         width: 65vw;
         flex-direction: revert;
     }
-    .left-login-img {
-        width: 45vw;
-    }
+   
     .main-login {
         
         height: 110vh;
     }
-}
+    .left-login-img{
+        display:none;
+    }
+    @media only screen and (max-width: 600px){
+    .right-login {
+        width: 40vw;
+        height: 90vh;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        transform: translate(0px, 30px);
+        justify-content: space-around;
+    }
+    .card-login {
+        width: 100%;
+        padding: 20px 35px;
+        transform: translate(-20px, -50px);}
+        .cadastro-login.active {
+            width: 100%;}
+    .cadastro-login {
+        transform: translate(-20px, -50px);}
+       
+
+    }}
